--- a/jogo-da-velha/css/style.css
+++ b/jogo-da-velha/css/style.css
@@ -26,6 +26,7 @@ h1 {
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 5rem;
 }
 
 .box {
@@ -79,9 +80,9 @@ h1 {
 
 /* class hide */
 
-/* .hide {
+.hide {
   display: none !important;
-} */
+}
 
 /* placar */
 
@@ -124,5 +125,4 @@ h1 {
   background-color: #000;
   color: #fff;
   padding: 20px;
-  display: none;
 }
